--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </script>
 
     <!-- SDK样式 -->
-    <link rel="stylesheet" href="https://gitee.com/tsinghua-nercbds/DWF4.0/raw/dev-sdk/app-web/src/views/sdk/lib/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lb2006ok/DWFFORMENGINESDK@master/lib/style.css">
     <!-- SDK脚本 -->
-    <script src="https://gitee.com/tsinghua-nercbds/DWF4.0/raw/dev-sdk/app-web/src/views/sdk/lib/dwf-form-engine.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/lb2006ok/DWFFORMENGINESDK@master/lib/dwf-form-engine.umd.js"></script>
     <style>
       * {
         margin: 0;
